--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --exit tests/*",
-    "start": "node server.js",
-    "watch": "nodemon server.js"
+    "start": "nodemon server.js",
+    "worker-start": "nodemon bull/workers/validatingWorkers.js"
   },
   "license": "MIT",
   "devDependencies": {
@@ -17,8 +17,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bull": "^4.12.4",
+    "bull-arena": "^4.4.1",
+    "compresion": "^1.7.11",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "moment": "^2.30.1"
   }
 }
