--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "@bull-monitor/express": "^5.4.0",
     "body-parser": "^1.20.2",
     "bull": "^4.12.4",
     "bull-arena": "^4.4.1",
